--- a/src/features/dashboards/SelectDashboard.scss
+++ b/src/features/dashboards/SelectDashboard.scss
@@ -64,3 +64,22 @@
 .selectedDashboardTypeWrapper {
   background-color: #e1e1e2;
 }
+
+.selectPowerBiPropertyWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.selectPowerBiPropertyWrapper div p {
+  font-family: 'DM sans';
+  font-weight: 500;
+  font-size: 16px;
+  color: #757575;
+}
+
+.selectPowerBiPropertyWrapper div {
+  width: 100%;
+  margin: 0% 5% 5px 0%;
+}
