--- a/src/features/dashboards/SelectDashboard.scss
+++ b/src/features/dashboards/SelectDashboard.scss
@@ -1,6 +1,6 @@
 .selectDashbaordWrapper {
-  height: 100%;
   width: 97%;
+  overflow-y: scroll;
 }
 
 .headerWrapper {
@@ -83,3 +83,4 @@
   width: 100%;
   margin: 0% 5% 5px 0%;
 }
+
